--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 img {
     width: 150px;
+    height: 150px;
+    margin: 0 20px;
+    object-fit: contain;
+}
+
+#image-group {
+    display: inline-block;
 }
