--- a/style.css
+++ b/style.css
@@ -1,10 +1,43 @@
+* {
+    margin: 0px;
+    padding: 0px;
+}
+
+html {
+    background: linear-gradient(217deg, rgba(255,0,0,.8), rgba(255,0,0,0) 70.71%),
+                linear-gradient(127deg, rgba(0,255,0,.8), rgba(0,255,0,0) 70.71%),
+                linear-gradient(336deg, rgba(0,0,255,.8), rgba(0,0,255,0) 70.71%);
+    height:100%;
+    width: 100%;
+    font-family:Arial, Helvetica, sans-serif;
+}
+
+body {
+    width: max-content;
+    margin: 1em auto;
+    background-color: white;
+    border-radius: 50px;
+    padding: 2em;
+    box-shadow: 0px 0px 10px 0 #5c5c5c;
+}
+
 img {
-    width: 150px;
-    height: 150px;
+    width: 250px;
+    height: 250px;
     margin: 0 20px;
     object-fit: contain;
 }
 
-#image-group {
+h1, h2 {
+    text-align: center;
+}
+
+#image-group, main {
     display: inline-block;
+    margin: 20px;
+}
+
+#button-id {
+    padding: 10px 20px;
+    margin-bottom: 20px;
 }
